--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
-<body>
+<body style="background-image: url(pictures/techno_background.jpg); background-size: cover;">
 	<div align = center>
 	<H1>BABY BRAIN</H1>
 	<H2>Работы учеников</H2>
-		<table border="1" cellpadding="10">
-		 <tr>
-		   <td><a href = "Андрей С/game_list.html">Андрей С</a></td>
-		 </tr>
-		 <tr>
-		   <td><a href = "Захар З/game_list.html">Захар З</a></td>
-		 </tr>
-		 <tr>
-		   <td><a href = "Маша Д/game_list.html">Маша Д</a></td>
-		 </tr>
-		 <tr>
-		   <td><a href = "Тимур/game_list.html">Тимур</a></td>
-		 </tr>
+		<table border="1" cellpadding="10" style="background-color: rgb(253, 253, 253); font-size: large;">
+			<tr>
+				<td><a href = "Абрамова_Яна/game_list.html">Абрамова Яна</a></td>
+				<td><a href = "Аненков_Кирилл/game_list.html">Аненков Кирилл</a></td>
+				<td><a href = "Антонченко_Никита/game_list.html">Антонченко Никита</a></td>
+				<td><a href = "Бобров_Данил/game_list.html">Бобров Данил</a></td>
+				<td><a href = "Васильев_Максим/game_list.html">Васильев Максим</a></td>
+			</tr>
+			<tr>
+				<td><a href = "Галков_Игнат/game_list.html">Галков Игнат</a></td>
+				<td><a href = "Демешко_Маша/game_list.html">Демешко Маша</a></td>
+				<td><a href = "Егорушкова_Изабелла/game_list.html">Егорушкова Изабелла</a></td>
+				<td><a href = "Ефимов_Прохор/game_list.html">Ефимов Прохор</a></td>
+				<td><a href = "Живитевский_Тимур/game_list.html">Живитевский Тимур</a></td>
+			</tr>
+			<tr>
+				<td><a href = "Заушкин_Захар/game_list.html">Заушкин Захар</a></td>
+				<td><a href = "Зелинский_Дмитрий/game_list.html">Зелинский Дмитрий</a></td>
+				<td><a href = "Катречко_Лев/game_list.html">Катречко Лев</a></td>
+				<td><a href = "Крысин_Сергей/game_list.html">Крысин Сергей</a></td>
+				<td><a href = "Москалев_Максим/game_list.html">Москалев Максим</a></td>
+			</tr>
+			<tr>
+				<td><a href = "Огай_Мирон/game_list.html">Огай Мирон</a></td>
+				<td><a href = "Панасюк_Максим/game_list.html">Панасюк Максим</a></td>
+				<td><a href = "Свирид_Андрей/game_list.html">Свирид Андрей</a></td>
+				<td><a href = "Сильченко_Кира/game_list.html">Сильченко Кира</a></td>
+				<td><a href = "Сильченко_Тимофей/game_list.html">Сильченко Тимофей</a></td>
+			</tr>
+			<tr>
+				<td><a href = "Хон_Роберт/game_list.html">Хон Роберт</a></td>
+				<td><a href = "Штрек_Давид/game_list.html">Штрек Давид</a></td>
+				<td><a href = "Яковенко_Ярослав/game_list.html">Яковенко Ярослав</a></td>
+			</tr>
 	</div>
 </body>
