Новые игры Демешко Маши

--- a/Демешко_Маша/game_list.html
+++ b/Демешко_Маша/game_list.html
@@ -11,5 +11,33 @@
 		   </td>
 		   <td> <a href = "Scratch/flappy_bird.html"><img src="Scratch/flappy_bird.png"></a>	
 		 </tr>
+		 <tr>
+			<td><a href = "Scratch/gugl 2.html">gugl 2</a>
+				<p>Цель: продержаться как можно дольше</p>
+				<p>Бесконечная игра</p>
+				<p>Управление: пробел - прыжок</p>
+			</td>
+			<td> <a href = "Scratch/gugl 2.html"><img src="Scratch/gugl 2.JPG"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/Labirint.JPG">Мышка в лабиринте</a>
+				<p>Цель: Долететь до финиша, не касаяcь стен</p>
+				<p>Управление: мышка летит за стрелочкой-указателем</p>
+			</td>
+			<td> <a href = "Scratch/Labirint.html"><img src="Scratch/Labirint.JPG"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/векторина4.html">Викторина</a>
+				<p>Цель: Ответить на все вопросы правильно</p>
+			</td>
+			<td> <a href = "Scratch/векторина4.html"><img src="Scratch/векторина4.JPG"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/фарик.html">Фарик</a>
+				<p>Цель: попасть по 10 шарикам</p>
+				<p>Управление: левая кнопка мыши - выстрел</p>
+			</td>
+			<td> <a href = "Scratch/фарик.html"><img src="Scratch/фарик.JPG"></a>	
+		  </tr>
 </div>
 </body>
