--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background-image: url(pictures/techno_background.jpg); background-size: cover;">
+<body style="background-image: url(pictures/techno_background.jpg); background-size: cover;" link="538AB0" vlink="538AB0" alink="FF5050">
 	<div align = center>
 	<H1>BABY BRAIN</H1>
 	<H2>Работы учеников</H2>
@@ -35,12 +35,17 @@
 				<td><a href = "Хон_Роберт/game_list.html">Хон Роберт</a></td>
 				<td><a href = "Штрек_Давид/game_list.html">Штрек Давид</a></td>
 				<td><a href = "Яковенко_Ярослав/game_list.html">Яковенко Ярослав</a></td>
-			</tr>
-			<tr>
 				<td><a href = "Гагарина_Юля/game_list.html">Гагарина Юля</a></td>
-				<td><a href = "Космач Макар/game_list.html">Космач Макар</a></td>
-				<td><a href = "Мамонтов_Сергей/game_list.html">Мамонтов Сергей</a></td>
-				<td><a href = "Петрянина_Злата/game_list.html">Петрянина Злата</a></td>
+
 			</tr>
+		</table>
 	</div>
+	
+	
+</body>
+<body link="white" vlink="white" alink="FF5050">
+	<footer align = center>
+		<br>
+		<a href = "https://desktop.turbowarp.org/" color = "white">Скачать TurboWarp</a>
+	</footer>
 </body>
