--- a/Мамонтов_Сергей/game_list.html
+++ b/Мамонтов_Сергей/game_list.html
@@ -1,22 +1,101 @@
 <body>
 <H3><a href = "../index.html">Назад</a></H3>
 <div align="center">
-	<H1>Абрамова Яна</H1>
+	<H1>Мамонтов Сергей</H1>
 	<table border="1" cellpadding="10">
 		 <tr>
-		   <td><a href = "Scratch/ANANAS.html">АНАНАС</a>
-			<p>Цель: пройти все уровни, не касаясь труб</p>
-			<p>Управление: когда пробел нажат - летит вверх</p>
-			<p>когда не нажат - летит вниз</p>
-		   </td>
-		   <td> <a href = "Scratch/ANANAS.html"><img src="Scratch/ANANAS.jpg"></a>	
-		 </tr>
-		 <tr>
-			<td><a href = "Scratch/KBUNKA.html">Квинка</a>
-			 <p>Цель: продержаться как можно дольше</p>
+			<td><a href = "Scratch/Лабиринт.html">лабиринт</a>
+			 <p>Цель: выйти из лабиринта</p>
+			 <p>Управление: стрелочки</p>
+			</td>
+			<td> <a href = "Scratch/Лабиринт.html"><img src="Scratch/Лабиринт.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/пинание мяча.html">пинание мяча</a>
+			 <p>Цель: набрать 10 очков</p>
+			 <p>Управление: мышка</p>
+			</td>
+			<td> <a href = "Scratch/пинание мяча.html"><img src="Scratch/пинание мяча.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/викторина2.html">Викторина</a>
+			 <p>Цель: Ответить на все вопросы</p>
+			 <p>Управление: клавиатура</p>
+			</td>
+			<td> <a href = "Scratch/викторина2.html"><img src="Scratch/викторина.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/ДАГОНЫ.html">ДАГОНЫ</a>
+			 <p>Цель: убежать от противника</p>
+			 <p>Управление: мышка</p>
+			</td>
+			<td> <a href = "Scratch/ДАГОНЫ.html"><img src="Scratch/ДАГОНЫ.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/динозавор.html">Динозавр</a>
+			 <p>Всемирно известная игра "динозаврик" от гугл, теперь на скретч!</p>
 			 <p>Управление: пробел - прыжок</p>
 			</td>
-			<td> <a href = "Scratch/KBUNKA.html"><img src="Scratch/KBUNKA.jpg"></a>	
+			<td> <a href = "Scratch/динозавор.html"><img src="Scratch/динозавор.jpg"></a>	
 		  </tr>
-</div>
+		  <tr>
+			<td><a href = "Scratch/змейка2.html">змейка</a>
+			 <p>Всемирно известная игра "змейка", теперь на скретч!</p>
+			 <p>Управление: WASD</p>
+			</td>
+			<td> <a href = "Scratch/змейка2.html"><img src="Scratch/змейка.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/FIappyBird.html">Flappy Bird</a>
+			 <p>Комия легендраной игры flappy bird, не разбей телефон!</p>
+			 <p>Цель: Не упасть и не столкнуться с трубой</p>
+			 <p>Управление: пробел - прыжок</p>
+			</td>
+			<td> <a href = "Scratch/FIappyBird.html"><img src="Scratch/FIappyBird.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/касма бой 3.html">Космо бой</a>
+			 <p>Цель: продержаться как можно дольше</p>
+			 <p>Управление: пробел - стреять, AD - влево, вправо</p>
+			</td>
+			<td> <a href = "Scratch/касма бой 3.html"><img src="Scratch/космо бой.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/космо шит.html">космощит</a>
+			 <p>Цель: продержаться как можно дольше</p>
+			 <p>Управление: мышка</p>
+			</td>
+			<td> <a href = "Scratch/космо шит.html"><img src="Scratch/космощит.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/лабиринт с ловушками1.html">Лабиринт с ловушками</a>
+			 <p>Цель: выйти из лабиринта</p>
+			 <p>Управление: стрелочки</p>
+			</td>
+			<td> <a href = "Scratch/лабиринт с ловушками1.html"><img src="Scratch/лабиринт с ловушками.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/понг3.html">пинг понг</a>
+			 <p>Цель: игра на 2 двоих, набрать на 5 очков больше, чем у соперника</p>
+			 <p>Управление: 1 игрок -  WS, 2 игрок - стрелочки вверх и вниз</p>
+			</td>
+			<td> <a href = "Scratch/понг3.html"><img src="Scratch/пинг понг.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/стрельба по шарикам.html">стрельба по шарикам</a>
+			 <p>Цель: сбить 10 шариков</p>
+			 <p>Управление: мышка, левая кнопка мыши</p>
+			</td>
+			<td> <a href = "Scratch/стрельба по шарикам.html"><img src="Scratch/стрельба по шарикам.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/Шутер1.html">Шутер</a>
+			 <p>Цель: уничтожить всех зомби</p>
+			 <p>Управление: мышка, левая кнопка мыши</p>
+			</td>
+			<td> <a href = "Scratch/Шутер1.html"><img src="Scratch/шутер.jpg"></a>	
+		  </tr>
+		  
+		  
+</div> </div>
 </body>
