--- a/Петрянина_Злата/game_list.html
+++ b/Петрянина_Злата/game_list.html
@@ -1,22 +1,64 @@
+<head>
+	<style>
+		.main {
+ 		 background-color: white;
+		}
+	</style>
+</head>
 <body>
 <H3><a href = "../index.html">Назад</a></H3>
 <div align="center">
-	<H1>Абрамова Яна</H1>
+	<H1>Петрянина Злата</H1>
+	<div class="main">
 	<table border="1" cellpadding="10">
-		 <tr>
-		   <td><a href = "Scratch/ANANAS.html">АНАНАС</a>
-			<p>Цель: пройти все уровни, не касаясь труб</p>
-			<p>Управление: когда пробел нажат - летит вверх</p>
-			<p>когда не нажат - летит вниз</p>
-		   </td>
-		   <td> <a href = "Scratch/ANANAS.html"><img src="Scratch/ANANAS.jpg"></a>	
-		 </tr>
-		 <tr>
-			<td><a href = "Scratch/KBUNKA.html">Квинка</a>
-			 <p>Цель: продержаться как можно дольше</p>
-			 <p>Управление: пробел - прыжок</p>
+		  <tr>
+			<td><a href = "Scratch/Викторина 1.html">Викторина</a>
+				<p>Цель: ответить на все вопросы</p>
 			</td>
-			<td> <a href = "Scratch/KBUNKA.html"><img src="Scratch/KBUNKA.jpg"></a>	
+			<td> <a href = "Scratch/Викторина 1.html"><img src="Scratch/Викторина.jpg"></a>
 		  </tr>
-</div>
+		  <tr>
+			<td><a href = "Scratch/Космощит.html">Космощит</a>
+				<p>Цель: отбить побольше лазеров</p>
+			 	<p>Управление: мышка</p>
+			</td>
+			<td> <a href = "Scratch/Космощит.html"><img src="Scratch/космощит.jpg"></a>
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/Лети бегемотик.html">Лети бегемотик</a>
+				<p>Копия легендраной игры flappy bird, не разбей телефон!</p>
+				<p>Цель: Не упасть и не столкнуться с трубой</p>
+			 	<p>Управление: пробел</p>
+			</td>
+			<td> <a href = "Scratch/Лети бегемотик.html"><img src="Scratch/Лети бегемотик.jpg"></a>
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/Мышка в лабиринте.html">Мышка в лабиринте</a>
+				<p>Цель: Выбраться из лабиринта</p>
+			 	<p>Управление: мышка</p>
+			</td>
+			<td> <a href = "Scratch/Мышка в лабиринте.html"><img src="Scratch/Мышка в лабиринте.jpg"></a>
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/пинг понг.html">Пинг понг</a>
+				<p>Цель: победить соперника</p>
+			 	<p>Управление: кнопки W/S и стрелочки вверх вниз</p>
+			</td>
+			<td> <a href = "Scratch/пинг понг.html"><img src="Scratch/пинг понг.jpg"></a>
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/Слови пончики.html">Слови пончики</a>
+				<p>Цель: Словить как можно больше пончиков за 1 минуту</p>
+			 	<p>Управление: стрелочки влево и вправо</p>
+			</td>
+			<td> <a href = "Scratch/Слови пончики.html"><img src="Scratch/Слови пончики.jpg"></a>
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/стрелбьба2.html">Стрельба</a>
+				<p>Цель: уничтожить 10 шариков за отведённое время</p>
+			 	<p>Управление: мышка, левая кнопка мыши</p>
+			</td>
+			<td> <a href = "Scratch/стрелбьба2.html"><img src="Scratch/стрелбьба2.jpg"></a>
+		  </tr>
+</div></div>
 </body>
