--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
 				<td><a href = "Хон_Роберт/game_list.html">Хон Роберт</a></td>
 				<td><a href = "Штрек_Давид/game_list.html">Штрек Давид</a></td>
 				<td><a href = "Яковенко_Ярослав/game_list.html">Яковенко Ярослав</a></td>
+			</tr>
+			<tr>
 				<td><a href = "Гагарина_Юля/game_list.html">Гагарина Юля</a></td>
-
+				<td><a href = "Космач_Макар/game_list.html">Космач Макар</a></td>
+				<td><a href = "Мамонтов_Сергей/game_list.html">Мамонтов Сергей</a></td>
+				<td><a href = "Петрянина_Злата/game_list.html">Петрянина Злата</a></td>
 			</tr>
 		</table>
 	</div>
