--- a/Космач_Макар/game_list.html
+++ b/Космач_Макар/game_list.html
@@ -1,22 +1,35 @@
 <body>
 <H3><a href = "../index.html">Назад</a></H3>
 <div align="center">
-	<H1>Абрамова Яна</H1>
+	<H1>Космач Макар</H1>
 	<table border="1" cellpadding="10">
-		 <tr>
-		   <td><a href = "Scratch/ANANAS.html">АНАНАС</a>
-			<p>Цель: пройти все уровни, не касаясь труб</p>
-			<p>Управление: когда пробел нажат - летит вверх</p>
-			<p>когда не нажат - летит вниз</p>
-		   </td>
-		   <td> <a href = "Scratch/ANANAS.html"><img src="Scratch/ANANAS.jpg"></a>	
-		 </tr>
-		 <tr>
-			<td><a href = "Scratch/KBUNKA.html">Квинка</a>
+		  <tr>
+			<td><a href = "Scratch/космощит.html">космощит</a>
 			 <p>Цель: продержаться как можно дольше</p>
-			 <p>Управление: пробел - прыжок</p>
+			 <p>Управление: мышка</p>
 			</td>
-			<td> <a href = "Scratch/KBUNKA.html"><img src="Scratch/KBUNKA.jpg"></a>	
+			<td> <a href = "Scratch/космощит.html"><img src="Scratch/космощит.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/арифметика.html">Викторина</a>
+				<p>Цель: Ответить на все вопросы</p>
+				<p>Управление: клавиатура</p>
+			</td>
+			<td> <a href = "Scratch/арифметика.html"><img src="Scratch/арифметика.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/батут.html">Слови арбуз</a>
+				<p>Цель: поймать все арбузы</p>
+				<p>Управление: стрелочки влево и впправо</p>
+			</td>
+			<td> <a href = "Scratch/батут.html"><img src="Scratch/слови арбуз.jpg"></a>	
+		  </tr>
+		  <tr>
+			<td><a href = "Scratch/лаберинт.html">Лабиринт</a>
+				<p>Цель: выйти из лабиринта</p>
+				<p>Управление: мышка</p>
+			</td>
+			<td> <a href = "Scratch/лаберинт.html"><img src="Scratch/лабиринт.jpg"></a>	
 		  </tr>
 </div>
 </body>
